--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -17,18 +17,14 @@
             android:id="@+id/tv_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clickable="true"
-            android:focusable="true"
             android:gravity="start"
             android:letterSpacing="1"
-            android:focusableInTouchMode="true"
-            android:longClickable="true"
             android:paddingBottom="10dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingTop="10dp"
             android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@android:color/black" />
     </ScrollView>
 
@@ -63,7 +59,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="level 0"
-        android:textColor="@android:color/holo_blue_light"
+        android:textColor="@android:color/holo_red_light"
         android:id="@+id/tv_level"
         android:layout_above="@+id/seekBar"
         android:gravity="center"
