--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,17 +14,23 @@
         android:layout_height="match_parent"
         android:id="@+id/listView"
          />
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_word"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_gravity="bottom|end"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="49dp"
-        android:layout_marginRight="20dp"
-        android:backgroundTint="@color/colorAccent"
-        android:src="@drawable/ic_format_indent_increase_white_36dp" />
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        >
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_word"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="20dp"
+            android:layout_marginEnd="49dp"
+            android:layout_marginRight="20dp"
+            android:src="@drawable/ic_format_indent_increase_white_36dp" />
+    </android.support.design.widget.CoordinatorLayout>
+
 </RelativeLayout>
