--- a/app/src/main/res/layout/word_list_item.xml
+++ b/app/src/main/res/layout/word_list_item.xml
@@ -2,23 +2,27 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     >
 
     <TextView
+        android:id="@+id/tv_wordnote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_centerInParent="true"
         android:text="Medium Text"
-        android:layout_centerVertical="true"
-        android:id="@+id/tv_wordnote" />
+        android:textColor="@android:color/white"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="50sp"
+        android:textStyle="italic" />
 
     <ImageButton
+        android:id="@+id/btn_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_delete_forever_black_24dp"
-        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
         android:background="@android:color/transparent"
-        android:id="@+id/btn_delete"
-        android:onClick="delete"
-        android:layout_alignParentRight="true" />
+        android:src="@drawable/ic_delete_forever_white_36dp"
+        android:layout_alignParentBottom="true"
+        />
 </RelativeLayout>
